[gd_scene load_steps=12 format=3 uid="uid://4w4qcrwlsqyk"]

[ext_resource type="Script" path="res://util/screen_settings.gd" id="1_oqh8x"]
[ext_resource type="Script" path="res://scenes/rpg_battle/gregmovie/signal_bus.gd" id="2_mtn5t"]
[ext_resource type="Script" path="res://scenes/rpg_battle/gregmovie/battle_manager.gd" id="3_f5w6v"]
[ext_resource type="Script" path="res://scenes/rpg_battle/gregmovie/actor_grid.gd" id="3_hkssh"]
[ext_resource type="Theme" uid="uid://bluqnktkqq206" path="res://scenes/rpg_battle/gregmovie/art/main_theme.tres" id="3_ukysc"]
[ext_resource type="Script" path="res://scenes/rpg_battle/gregmovie/mg_character.gd" id="5_rce0m"]
[ext_resource type="Script" path="res://scenes/rpg_battle/gregmovie/player_char_selection.gd" id="5_wa8dm"]
[ext_resource type="SpriteFrames" uid="uid://cgg6yedlort55" path="res://scenes/rpg_battle/gregmovie/art/sfr_greg.tres" id="5_xdqs5"]
[ext_resource type="Script" path="res://scenes/rpg_battle/gregmovie/compo/player_action_button.gd" id="8_vstuf"]
[ext_resource type="Script" path="res://scenes/rpg_battle/gregmovie/compo/enemy_actor_component.gd" id="10_1lsla"]
[ext_resource type="Script" path="res://scenes/rpg_battle/gregmovie/grid_mouse_follower.gd" id="10_k1fb8"]

[node name="GregMovieBattle" type="Node2D"]

[node name="ScreenSettings" type="Node2D" parent="."]
script = ExtResource("1_oqh8x")
window_size = Vector2(960, 540)
viewport_size = Vector2i(240, 160)
content_scale_mode = 2

[node name="MGSignalBus" type="Node" parent="."]
script = ExtResource("2_mtn5t")

[node name="BattleManager" type="Node" parent="." node_paths=PackedStringArray("grid")]
script = ExtResource("3_f5w6v")
grid = NodePath("../ActorGrid")

[node name="PlayerCharSelection" type="Control" parent="BattleManager" node_paths=PackedStringArray("mouse_follower", "grid")]
layout_mode = 3
anchors_preset = 0
offset_left = -77.0
offset_top = 21.0
offset_right = -77.0
offset_bottom = 21.0
theme = ExtResource("3_ukysc")
script = ExtResource("5_wa8dm")
mouse_follower = NodePath("../../GridMouseFollower")
grid = NodePath("../../ActorGrid")

[node name="Tabs" type="TabContainer" parent="BattleManager/PlayerCharSelection"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
current_tab = 3
tabs_visible = false

[node name="Main" type="VBoxContainer" parent="BattleManager/PlayerCharSelection/Tabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="Label" type="Label" parent="BattleManager/PlayerCharSelection/Tabs/Main"]
layout_mode = 2
size_flags_vertical = 0
text = "Greg"
horizontal_alignment = 1

[node name="MainMenu" type="VBoxContainer" parent="BattleManager/PlayerCharSelection/Tabs/Main"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="InfoButton" type="Button" parent="BattleManager/PlayerCharSelection/Tabs/Main/MainMenu"]
layout_mode = 2
text = "Info..."
alignment = 0

[node name="ActButton" type="Button" parent="BattleManager/PlayerCharSelection/Tabs/Main/MainMenu"]
layout_mode = 2
text = "Act..."
alignment = 0

[node name="MoveButton" type="Button" parent="BattleManager/PlayerCharSelection/Tabs/Main/MainMenu"]
layout_mode = 2
text = "Move..."
alignment = 0

[node name="MovingMenu" type="VBoxContainer" parent="BattleManager/PlayerCharSelection/Tabs"]
visible = false
layout_mode = 2
theme_override_constants/separation = 1
metadata/_tab_index = 1

[node name="Moment" type="Label" parent="BattleManager/PlayerCharSelection/Tabs/MovingMenu"]
layout_mode = 2
text = "momevent"

[node name="Info" type="VBoxContainer" parent="BattleManager/PlayerCharSelection/Tabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Label" type="Label" parent="BattleManager/PlayerCharSelection/Tabs/Info"]
layout_mode = 2
size_flags_vertical = 3
text = "name:
  greg
house:
  no"
autowrap_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="BattleManager/PlayerCharSelection/Tabs"]
layout_mode = 2
horizontal_scroll_mode = 0
metadata/_tab_index = 3

[node name="Act" type="VBoxContainer" parent="BattleManager/PlayerCharSelection/Tabs/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="BattleManager/PlayerCharSelection/Tabs/ScrollContainer/Act"]
layout_mode = 2
text = "KILLL!!!!!!"

[node name="Button2" type="Button" parent="BattleManager/PlayerCharSelection/Tabs/ScrollContainer/Act"]
layout_mode = 2
text = "KILLL!!!!!!"

[node name="Button3" type="Button" parent="BattleManager/PlayerCharSelection/Tabs/ScrollContainer/Act"]
layout_mode = 2
text = "KILLL!!!!!!"

[node name="Button4" type="Button" parent="BattleManager/PlayerCharSelection/Tabs/ScrollContainer/Act"]
layout_mode = 2
text = "KILLL!!!!!!"

[node name="Button5" type="Button" parent="BattleManager/PlayerCharSelection/Tabs/ScrollContainer/Act"]
layout_mode = 2
text = "KILLL!!!!!!"

[node name="Button6" type="Button" parent="BattleManager/PlayerCharSelection/Tabs/ScrollContainer/Act"]
layout_mode = 2
text = "KILLL!!!!!!"

[node name="Button7" type="Button" parent="BattleManager/PlayerCharSelection/Tabs/ScrollContainer/Act"]
layout_mode = 2
text = "KILLL!!!!!!"

[node name="Button8" type="Button" parent="BattleManager/PlayerCharSelection/Tabs/ScrollContainer/Act"]
layout_mode = 2
text = "KILLL!!!!!!"

[node name="Button9" type="Button" parent="BattleManager/PlayerCharSelection/Tabs/ScrollContainer/Act"]
layout_mode = 2
text = "KILLL!!!!!!"

[node name="ActorGrid" type="Node2D" parent="."]
position = Vector2(24, 18)
script = ExtResource("3_hkssh")

[node name="MGCharacter" type="CharacterBody2D" parent="ActorGrid" node_paths=PackedStringArray("actor_component")]
position = Vector2(56, 57)
script = ExtResource("5_rce0m")
actor_component = NodePath("Button")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="ActorGrid/MGCharacter"]
position = Vector2(0, -8)
sprite_frames = ExtResource("5_xdqs5")
animation = &"walk_down"

[node name="Button" type="Button" parent="ActorGrid/MGCharacter" node_paths=PackedStringArray("player_char_selection")]
offset_left = -8.0
offset_top = -16.0
offset_right = 8.0
script = ExtResource("8_vstuf")
player_char_selection = NodePath("../../../BattleManager/PlayerCharSelection")

[node name="TheEnemy_" type="CharacterBody2D" parent="ActorGrid" node_paths=PackedStringArray("actor_component")]
position = Vector2(121, 58)
script = ExtResource("5_rce0m")
actor_component = NodePath("EnemyActionCompnent")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="ActorGrid/TheEnemy_"]
position = Vector2(0, -8)
sprite_frames = ExtResource("5_xdqs5")
animation = &"walk_down"

[node name="EnemyActionCompnent" type="Node" parent="ActorGrid/TheEnemy_" node_paths=PackedStringArray("grid")]
script = ExtResource("10_1lsla")
grid = NodePath("../..")

[node name="GridMouseFollower" type="Node2D" parent="." node_paths=PackedStringArray("grid")]
script = ExtResource("10_k1fb8")
grid = NodePath("../ActorGrid")

[node name="ColorRect" type="ColorRect" parent="GridMouseFollower"]
offset_right = 16.0
offset_bottom = 16.0
